--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 # 服务器端口
-server.port=8088
+server.port=1234
 # 打印日志
 logging.level.root=WARN
 logging.level.com.dsc.springboot=debug
-# 数据源
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dsc?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=root
+# -------------------------------------------------------
 # 配置静态资源
 spring.mvc.static-path-pattern=/templates/**
 #thymeleaf配置
@@ -21,3 +17,40 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 #编码格式
 spring.thymeleaf.encoding=UTF-8
+# -------------------------------------------------------
+# 数据源
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+# -------------------------------------------------------
+# redis
+#地址
+spring.redis.host=127.0.0.1
+#Redis服务器连接端口
+spring.redis.port=6379
+#Redis服务器连接密码（默认为空）
+spring.redis.password=ami#38a65c
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+#连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+#连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+#连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+#连接超时时间（毫秒）
+spring.redis.timeout=30000
+# -------------------------------------------------------
+# rabbitmq
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+## 开启confirms回调 P -> Exchange
+#spring.rabbitmq.publisher-confirms=true
+## 开启returnedMessage回调 Exchange -> Queue
+#spring.rabbitmq.publisher-returns=true
+## 设置手动确认(ack) Queue -> C
+#spring.rabbitmq.listener.simple.acknowledge-mode=manual
+#spring.rabbitmq.listener.simple.prefetch=100
