--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,12 @@ spring.redis.pool.min-idle=0
 #连接超时时间（毫秒）
 spring.redis.timeout=30000
 # -------------------------------------------------------
+# elasticsearch
+spring.data.elasticsearch.client.reactive.username=elastic
+spring.data.elasticsearch.client.reactive.password=elastic@6789
+spring.data.elasticsearch.client.reactive.port=9200
+spring.data.elasticsearch.client.reactive.address=elasticsearch.dev.amiintellect.com
+# -------------------------------------------------------
 # rabbitmq
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
